# adnexus

./: .coverage  .gitignore  LICENCE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  docs.yml  main.yml
adnexus/: containers.py  decorators.py  exceptions.py  warnings.py  wrappers.py
adnexus/config/: __init__.py  base_loader.py  builtin.py  helpers.py
adnexus/integrations/: starlette.py
docs/: index.md
scripts/: manage_version.py  test.py
tests/: container_fixtures.py  invalid_injectables.py  settings.toml  test_callables.py  test_config.py  test_containers.py  test_decorators.py  test_exceptions.py  test_markers.py  test_providers.py  test_starlette_integration.py  test_wrappers.py
xdi/: callables.py  containers.py  decorators.py  exceptions.py  markers.py  providers.py  wrappers.py
xdi/config/: __init__.py  base.py  base_loader.py  builtin.py  helpers.py
xdi/contrib/: starlette.py
xdi/integrations/: starlette.py
